# persona-agent

./: .env  .gitignore  AGENTS.md  README.md  app.py  env.example  pyproject.toml
marketing_agent/: __init__.py  agent.py
